# storage/api-docs/api-docs.json
@@ -8,13 +8,13 @@
         },
         "version": "1.0"
     },
-    "host": "127.0.0.1",
+    "host": "www.xl-swagger.com",
     "basePath": "",
     "schemes": [
         "http"
     ],
     "paths": {
-        "/swager": {
+        "/swagger": {
             "get": {
                 "tags": [
                     "swager\u6d4b\u8bd5"
